--- a/src/app/pages/documents/documents.component.html
+++ b/src/app/pages/documents/documents.component.html
@@ -244,7 +244,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <img src="assets/img/D1%20Safety%20Layout.PNG" alt="Warehouse Safety Layout" class="safety-layout-image">
+            <img src="assets/img/D1%20Safety%20Layout.jpg" alt="Warehouse Safety Layout" class="safety-layout-image">
           </div>
         </div>
       </div>
