--- a/src/app/pages/task/task-board/task-board.component.scss
+++ b/src/app/pages/task/task-board/task-board.component.scss
@@ -8,6 +8,7 @@
     justify-content: flex-end;
     align-items: center;
     margin-bottom: 24px;
+    margin-top: 50px; // Move the entire header down by 50px
 
     .board-actions {
       display: flex;
