--- a/src/app/pages/task/task-board/task-board.component.scss
+++ b/src/app/pages/task/task-board/task-board.component.scss
@@ -19,6 +19,10 @@
         width: 300px;
         margin-bottom: -1.25em;
       }
+
+      .export-btn {
+        margin-left: 8px;
+      }
     }
   }
 
