--- a/src/app/pages/task/task-board/task-board.component.html
+++ b/src/app/pages/task/task-board/task-board.component.html
@@ -9,6 +9,10 @@
         <mat-icon>add</mat-icon>
         New Task
       </button>
+      <button mat-stroked-button color="accent" (click)="exportToExcel()" class="export-btn">
+        <mat-icon>file_download</mat-icon>
+        Export Excel
+      </button>
     </div>
   </div>
 
